Bug 480319 - "Synchronized browsing mode" between panels ignored when user uses "Back" or "Forward" buttons
Summary: "Synchronized browsing mode" between panels ignored when user uses "Back" or ...
Status: RESOLVED FIXED
Alias: None
Product: krusader
Classification: Applications
Component: general (show other bugs)
Version: 2.8.0
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Krusader Bugs Distribution List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-01-25 14:22 UTC by Rafael Linux User
Modified: 2024-11-27 10:37 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Rafael Linux User 2024-01-25 14:22:05 UTC
SUMMARY
When Krusader has two synchronized folders, if the user presses the "Back" and "Forward" buttons (Alt + Left and Alt + Right respectively) the synchronization is lost. The action is only performed on the active panel, not in both synchronized.


STEPS TO REPRODUCE
1 - Access in each Krusader panel two different folders containing exactly the same files and sub-folders.
2 - Click on both panels the button to activate the "Synchronized browsing mode".
3 - Access a sub-folder in either panel and the same action will be performed in the other panel by Krusader.
4 - Click the "Back" button in either panel.

OBSERVED RESULT
In the inactive panel, it does not switch to the corresponding folder

EXPECTED RESULT
Perform the "Back" action on both panels.

SOFTWARE/OS VERSIONS
Operating System: openSUSE Tumbleweed 20230613
KDE Plasma Version: 5.27.5
KDE Frameworks Version: 5.107.0
Qt Version: 5.15.9

ADDITIONAL INFORMATION
Comment 1 Alex Bikadorov 2024-10-14 16:07:52 UTC
Merge request: https://invent.kde.org/utilities/krusader/-/merge_requests/149
Comment 2 Alex Bikadorov 2024-11-27 10:37:17 UTC
Git commit 948880e6057ecff5c46408dcaec0d41f6b909086 by Alex Bikadorov, on behalf of Alexander Bikadorov.
Committed on 27/11/2024 at 10:34.
Pushed by abikadorov into branch 'master'.

Panel: Fix history actions ignoring sync-browse mode

FIXED: [ 480319 ] "Synchronized browsing mode" between panels ignored when user uses "Back" or "Forward" button

M  +5    -5    app/Panel/dirhistoryqueue.cpp
M  +3    -3    app/Panel/dirhistoryqueue.h
M  +15   -13   app/Panel/panelfunc.cpp
M  +1    -1    app/Panel/panelfunc.h

https://invent.kde.org/utilities/krusader/-/commit/948880e6057ecff5c46408dcaec0d41f6b909086