Panel: Fix history actions ignoring sync-browse mode

FIXED: [ 480319 ] "Synchronized browsing mode" between panels ignored when user uses "Back" or "Forward" button
BUG: 480319